--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@types/sequelize": "4.28",
+    "cors": "^2.8.5",
     "express": "4.17.1",
     "sequelize": "^6.25.5"
   },
