--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,3 +1,7 @@
 {
+    "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "/users/jenifermiranda/documents/projetos/trivia-dev/trivia-dev/frontend/tsconfig.json"
+  },
     "extends": "@trybe/eslint-config-frontend/typescript"
 }
